# data_science

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements-dev.txt
documentation/: csds-352-vault.typ
documentation/llm-examples/: sample-001.txt  sample-002.txt  sample-003.txt  sample-004.txt
notebooks/: 1.4.1.bmi-exploration.ipynb  1.lab.1.wisconsin-cancer-analysis.ipynb  1.lab.2.auto-mpg-analysis.ipynb  2.4.1.polynomial-regression-sgd.ipynb  2.lab.1.wisconsin-cancer-classification.ipynb  2.lab.2.auto-mpg-regression.ipynb  3.4.1.minimal-xor-network.ipynb  3.lab.1.wisconsin-cancer-classification-nn.ipynb  3.lab.2.auto-mpg-regression-nn.ipynb
notebooks/data/: synthetic-polynomial-data.txt
src/: README.md  docker-compose.yml
src/backend/: .env.example  .gitignore  Dockerfile  pytest.ini  requirements.txt  test_api.py
src/backend/chroma_db/: chroma.sqlite3
src/backend/config/: settings.py
src/backend/dashboard/: app.py
src/backend/dashboard/pages/: 1_Overview.py  2_Clustering.py  3_Search.py  4_Chatbot.py
src/backend/scripts/: analyze_clusters.py  build_database.py  calculate_centroids.py  complete_analysis.py  debug_chroma.py  detect_anomalies.py  download_freesound.py  evaluate_system.py  test_ingestion.py  test_search.py
src/backend/src/api/: main.py  (+2 more)
src/backend/tests/: _test_api.py.skip  conftest.py  test_audio_embedder.py  test_audio_processor.py  test_clustering.py  test_dimensionality_reduction.py  test_ingestion.py  test_search.py  test_security.py  test_validators.py
src/backend/utils/: feature_extractors.py  security.py  validators.py
(+9 files in other folders)
